--- a/Groza_Tudor_Lab2/Pages/Books/Create.cshtml
+++ b/Groza_Tudor_Lab2/Pages/Books/Create.cshtml
@@ -19,9 +19,18 @@
                 <span asp-validation-for="Book.Title" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Book.Author" class="control-label"></label>
-                <input asp-for="Book.Author" class="form-control" />
-                <span asp-validation-for="Book.Author" class="text-danger"></span>
+                <label asp-for="Book.AuthorID" class="control-label">Author</label>
+                <select asp-for="Book.AuthorID" class="form-control" asp-items="ViewBag.AuthorID">
+                </select>
+                @* <select id="AuthorID" name="AuthorID" class="form-control">
+                    <option value="">-- Select Author --</option>
+                    @foreach (var author in authors)
+                    {
+                        <option value="@author.ID">@author.AuthorName</option>
+                    }
+                </select> *@
+
+                <span asp-validation-for="Book.AuthorID" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Book.Price" class="control-label"></label>
@@ -31,8 +40,8 @@
             <div class="form-group">
                 <label asp-for="Book.PublishingDate" class="control-label"></label>
                 <input asp-for="Book.PublishingDate" class="form-control" />
-                <span asp-validation-for="Book.PublishingDate" class="textdanger"></span>
-                </div>
+                <span asp-validation-for="Book.PublishingDate" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="Book.PublisherID" class="control-label">Publisher Name</label>
                 <select asp-for="Book.PublisherID" class="form-control" asp-items="ViewBag.PublisherID">
