--- a/Groza_Tudor_Lab2/Pages/Books/Delete.cshtml
+++ b/Groza_Tudor_Lab2/Pages/Books/Delete.cshtml
@@ -21,9 +21,21 @@
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Book.Author)
         </dt>
+        @* <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Book.FirstName)
+        </dt>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Book.LastName)
+        </dt> *@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Book.Author)
         </dd>
+        @* <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Book.FirstName)
+        </dd>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Book.LastName)
+        </dd> *@
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Book.Price)
         </dt>
