--- a/Groza_Tudor_Lab2/Pages/Books/Index.cshtml
+++ b/Groza_Tudor_Lab2/Pages/Books/Index.cshtml
@@ -19,6 +19,12 @@
             <th>
                 @Html.DisplayNameFor(model => model.Book[0].Author)
             </th>
+            @* <th>
+                @Html.DisplayNameFor(model => model.Book[0].FirstName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Book[0].LastName)
+            </th> *@
             <th>
                 @Html.DisplayNameFor(model => model.Book[0].Price)
             </th>
@@ -40,6 +46,12 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Author)
             </td>
+           @*  <td>
+                @Html.DisplayFor(modelItem => item.FirstName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.LastName)
+            </td> *@
             <td>
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
@@ -49,6 +61,11 @@
             <td>
                     @Html.DisplayFor(modelItem => item.Publisher.PublisherName)
             </td>
+                <td>
+                    <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
+                    <a asp-page="./Details" asp-route-id="@item.ID">Details</a> |
+                    <a asp-page="./Delete" asp-route-id="@item.ID">Delete</a>
+                </td>
         </tr>
 }
     </tbody>
