--- a/Groza_Tudor_Lab2/Pages/Authors/Delete.cshtml
+++ b/Groza_Tudor_Lab2/Pages/Authors/Delete.cshtml
@@ -1,12 +1,13 @@
 ﻿@page
-@model Groza_Tudor_Lab2.Pages.Author.DetailsModel
+@model Groza_Tudor_Lab2.Pages.Authors.DeleteModel
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Delete";
 }
 
-<h1>Details</h1>
+<h1>Delete</h1>
 
+<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Author</h4>
     <hr />
@@ -24,8 +25,10 @@
             @Html.DisplayFor(model => model.Author.LastName)
         </dd>
     </dl>
-</div>
-<div>
-    <a asp-page="./Edit" asp-route-id="@Model.Author?.ID">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+    
+    <form method="post">
+        <input type="hidden" asp-for="Author.ID" />
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <a asp-page="./Index">Back to List</a>
+    </form>
 </div>
