--- a/Groza_Tudor_Lab2/Pages/Authors/Edit.cshtml
+++ b/Groza_Tudor_Lab2/Pages/Authors/Edit.cshtml
@@ -1,11 +1,11 @@
 ﻿@page
-@model Groza_Tudor_Lab2.Pages.Author.CreateModel
+@model Groza_Tudor_Lab2.Pages.Authors.EditModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Edit";
 }
 
-<h1>Create</h1>
+<h1>Edit</h1>
 
 <h4>Author</h4>
 <hr />
@@ -13,6 +13,7 @@
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="Author.ID" />
             <div class="form-group">
                 <label asp-for="Author.FirstName" class="control-label"></label>
                 <input asp-for="Author.FirstName" class="form-control" />
@@ -24,14 +25,14 @@
                 <span asp-validation-for="Author.LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-page="Index">Back to List</a>
+    <a asp-page="./Index">Back to List</a>
 </div>
 
 @section Scripts {
