--- a/Groza_Tudor_Lab2/Pages/Authors/Index.cshtml
+++ b/Groza_Tudor_Lab2/Pages/Authors/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model Groza_Tudor_Lab2.Pages.Author.IndexModel
+@model Groza_Tudor_Lab2.Pages.Authors.IndexModel
 
 @{
     ViewData["Title"] = "Index";
