--- a/Groza_Tudor_Lab2/Pages/Books/Index.cshtml
+++ b/Groza_Tudor_Lab2/Pages/Books/Index.cshtml
@@ -44,14 +44,8 @@
                 @Html.DisplayFor(modelItem => item.Title)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Author)
+                @Html.DisplayFor(modelItem => item.Author.FullName)
             </td>
-           @*  <td>
-                @Html.DisplayFor(modelItem => item.FirstName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LastName)
-            </td> *@
             <td>
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
