--- a/Groza_Tudor_Lab2/Pages/Books/Delete.cshtml
+++ b/Groza_Tudor_Lab2/Pages/Books/Delete.cshtml
@@ -28,7 +28,7 @@
             @Html.DisplayNameFor(model => model.Book.LastName)
         </dt> *@
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Book.Author)
+            @Html.DisplayFor(model => model.Book.Author.FullName)
         </dd>
         @* <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Book.FirstName)
