--- a/Groza_Tudor_Lab2/Pages/Books/Details.cshtml
+++ b/Groza_Tudor_Lab2/Pages/Books/Details.cshtml
@@ -27,7 +27,7 @@
             @Html.DisplayNameFor(model => model.Book.LastName)
         </dt> *@
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Book.Author)
+            @Html.DisplayFor(model => model.Book.Author.FullName)
         </dd>
 @*         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Book.FirstName)
